# based-vectors

./: based-vectors.cabal
src/Data/Vector/: Based.hs
src/Data/Vector/Based/: Codensity.hs
